# docs/openapi/swagger.yaml
@@ -17,6 +17,23 @@ components:
             type: string
             example: Validation error
 
+    BookList:
+      type: object
+      properties:
+        current_page:
+          description: Current page of the pagination
+          type: integer
+          example: 1
+        per_page:
+          description: Amount of items that should be returned on each page
+          type: integer
+          example: 10
+        items:
+          description: Array of available entrie items
+          type: array
+          items:
+            $ref: '#/components/schemas/Book'
+
     Book:
       type: object
       properties:
@@ -90,6 +107,60 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/BookId'
+        '400':
+          description: Bad request.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '500':
+          description: Internal Server Error.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+    get:
+      description: |
+        Creates a new book
+      tags:
+        - V1 - Books
+      parameters:
+        - in: query
+          name: title
+          required: false
+          description: Filter books by title
+          schema:
+            type: string
+            example: title sample
+        - in: query
+          name: author
+          required: false
+          description: Filter books by author
+          schema:
+            type: string
+            example: author sample
+        - in: query
+          name: perPage
+          required: false
+          description: Controls the number of entries per page
+          schema:
+            type: integer
+            example: 15
+        - in: query
+          name: page
+          required: false
+          description: Controls the current page
+          schema:
+            type: integer
+            example: 1
+
+      responses:
+        '200':
+          description: Created.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BookList'
         '400':
           description: Bad request.
           content:
